--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
       "start": "npm run start:server && npm run start:client",
       "start:server": "node server",
       "start:client": "cd client && npm start",
-      "install": "cd client && npm install && cd ../server && npm install"
+      "install": "npm install && cd ../server && npm install"
     }
   }
