--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
       "start": "npm run start:server && npm run start:client",
       "start:server": "node server",
       "start:client": "cd client && npm start",
-      "install": "npm install && cd ../server && npm install"
+      "install": "yarn install && cd ../server && yarn install"
     }
   }
