--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
     "name": "inventory",
     "version": "1.0.0",
     "license": "ISC",
+    "dependencies": {
+      "body-parser": "^1.20.2",
+      "express": "^4.18.2",
+      "mongoose": "^7.4.3",
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "jsbarcode": "^3.11.5",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-router-dom": "^6.15.0",
+      "react-scripts": "5.0.1",
+      "web-vitals": "^2.1.4"
+    },
     "scripts": {
       "start": "npm run start:server && npm run start:client",
       "start:server": "node server",
       "start:client": "cd client && npm start",
-      "install": "npm install && cd ../server && npm install"
+      "install": "cd .. && npm install"
     }
   }
