--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "start": "npm run start:server && npm run start:client",
       "start:server": "node server",
       "start:client": "cd client && npm start",
-      "install": "cd .. && yarn install"
+      "install": "cd .. && yarn install",
+      "build": "webpack"
     }
   }
