--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
-    "dev": "nodemon server",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "build": "npm install"
   },
   "keywords": [],
